[project]
name = "diff-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.11.0",
    "dllm",
    "rich>=14.3.3",
    "torch>=2.1.0",
]

[tool.uv.workspace]
members = ["dllm"]

[tool.uv.sources]
dllm = { workspace = true, editable = true }
